override header text to white

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
     <!-- Header -->
     <header id="top" class="header">
-        <div class="text-vertical-center">
+        <div class="text-vertical-center"><span style="color: white;">
             <h1>Joshua Hysong</h1>
-            <h3>Software Engineer</h3>
+            <h3>Software Engineer</h3></span>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
