Removed learn more buttonsa and added links to icons in connect section

--- a/index.html
+++ b/index.html
@@ -91,54 +91,54 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-github fa-stack-1x text-primary"></i>
+                                <a href="https://github.com/joshuahysong" class="btn btn-circle">
+                                    <span class="fa-stack fa-4x">
+                                    <i class="fa fa-github fa-stack-1x text-primary"></i>
+                                </a>
                             </span>
                                 <h4>
                                     <strong>Github</strong>
                                 </h4>
-                                <p>Peruse or contribute to my projects.<br /><br /></p>
-                                <a href="https://github.com/joshuahysong" class="btn btn-light">Learn More</a>
+                                <p>Peruse or contribute to my projects.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
 							<div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-stack-overflow fa-stack-1x text-primary"></i>
+                                <a href="https://stackoverflow.com/users/1766561/joshua-hysong" class="btn btn-circle">
+                                    <span class="fa-stack fa-4x">
+                                    <i class="fa fa-stack-overflow fa-stack-1x text-primary"></i>
+                                </a>
                             </span>
                                 <h4>
                                     <strong>Stack Overflow</strong>
                                 </h4>
-                                <p>Ask a question! I love to help.<br /><br /></p>
-                                <a href="https://stackoverflow.com/users/1766561/joshua-hysong" class="btn btn-light">Learn More</a>
+                                <p>Ask a question! I love to help.
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-linkedin fa-stack-1x text-primary"></i>
+                                <a href="https://www.linkedin.com/in/joshuahysong/" class="btn btn-circle">
+                                    <span class="fa-stack fa-4x">
+                                    <i class="fa fa-linkedin fa-stack-1x text-primary"></i>
+                                </a>
                             </span>
                                 <h4>
                                     <strong>LinkedIn</strong>
                                 </h4>
                                 <p>Have we worked together?<br />Add me to your network.</p>
-                                <a href="https://www.linkedin.com/in/joshuahysong/" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-twitter fa-stack-1x text-primary"></i>
+                                <a href="https://www.twitter.com/joshuahysong" class="btn btn-circle">
+                                    <span class="fa-stack fa-4x">
+                                    <i class="fa fa-twitter fa-stack-1x text-primary"></i>
+                                </a>
                             </span>
                                 <h4>
                                     <strong>Twitter</strong>
                                 </h4>
                                 <p>Follow me!<br /><br /></p>
-                                <a href="https://www.twitter.com/joshuahysong" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                     </div>
