--- a/index.html
+++ b/index.html
@@ -1,256 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Joshua Hysong">
+        <title>JoshuaHysong.com</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/site.css" />
+    </head>
+    <body>
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Joshua Hysong</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
-    <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Joshua Hysong</a>
-            </li>
-            <li>
-                <a href="#top" onclick=$("#menu-close").click();>Home</a>
-            </li>
-            <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
-            </li>
-            <li>
-                <a href="#services" onclick=$("#menu-close").click();>Connect</a>
-            </li>
-            <li>
-                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
-            </li>
-        </ul>
-    </nav>
-
-    <!-- Header -->
-    <header id="top" class="header">
-        <div class="text-vertical-center"><span style="color: white;">
-            <h1>Joshua Hysong</h1>
-            <h3>Software Engineer</h3></span>
-            <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
-        </div>
-    </header>
-
-    <!-- About -->
-    <section id="about" class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Software engineer specializing in logistics and workflow improvements.</h2>
-                    <p class="lead">Passionately interested in making your job easier through technology.<br />
-					Currently working as a contractor at Norfolk Southern.</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Connect -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Connect</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <a href="https://github.com/joshuahysong" class="btn btn-circle">
-                                    <span class="fa-stack fa-4x">
-                                    <i class="fa fa-github fa-stack-1x text-primary"></i>
-                                </a>
-                            </span>
-                                <h4>
-                                    <strong>Github</strong>
-                                </h4>
-                                <p>Peruse or contribute to my projects.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-							<div class="service-item">
-                                <a href="https://stackoverflow.com/users/1766561/joshua-hysong" class="btn btn-circle">
-                                    <span class="fa-stack fa-4x">
-                                    <i class="fa fa-stack-overflow fa-stack-1x text-primary"></i>
-                                </a>
-                            </span>
-                                <h4>
-                                    <strong>Stack Overflow</strong>
-                                </h4>
-                                <p>Ask a question! I love to help.
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <a href="https://www.linkedin.com/in/joshuahysong/" class="btn btn-circle">
-                                    <span class="fa-stack fa-4x">
-                                    <i class="fa fa-linkedin fa-stack-1x text-primary"></i>
-                                </a>
-                            </span>
-                                <h4>
-                                    <strong>LinkedIn</strong>
-                                </h4>
-                                <p>Have we worked together?<br />Add me to your network.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <a href="https://www.twitter.com/joshuahysong" class="btn btn-circle">
-                                    <span class="fa-stack fa-4x">
-                                    <i class="fa fa-twitter fa-stack-1x text-primary"></i>
-                                </a>
-                            </span>
-                                <h4>
-                                    <strong>Twitter</strong>
-                                </h4>
-                                <p>Follow me!<br /><br /></p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-	
-	<!-- Footer -->
-    <footer id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Joshua Hysong</strong></h4>
-                    <p>Buford, GA 30518</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (678) 765-9103</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:joshuahysong@gmail.com">joshuahysong@gmail.com</a>
+        <nav class="navbar fixed-top navbar-expand-md navbar-dark">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
+                <div class="collapse navbar-collapse" id="navMenu">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#connect">Connect</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#connect">Contact</a>
                         </li>
                     </ul>
-                    <hr class="small">
-                    <p class="text-muted">Copyright &copy; 2017</p>
                 </div>
             </div>
-        </div>
-        <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
-    </footer>
+        </nav>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+        <header id="top" class="container-fluid text-center">
+            <div class="row vh-90 align-items-center text-white">
+                <div class="col">
+                    <hgroup class="mt-n5">
+                        <h1 class="display-3"><strong>Joshua Hysong</strong></h1>
+                        <h2>Software Engineer</h2>
+                    </hgroup>
+                </div>
+            </div>
+            <div class="row vh-10 align-items-center text-white">
+                <div class="col">
+                    <a href="#about" class="scroll-link"><i class="h2 fas fa-chevron-down mx-auto"></i></a>
+                </div>
+            </div>
+        </header>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+        <main class="container-fluid text-center">
+            <section id="about" class="row bg-white p-5">
+                <div class="col">
+                    <p class="h2">Software Engineer specializing in true full-stack development</p>
+                    <p class="lead">
+                        Passionately interested in making your life easier through technology.<br />
+                    </p>
+                </div>
+            </section>
+            <section id="connect" class="row bg-primary text-white p-5">
+                <div class="col-md-6 col-lg-3 pb-5 pb-lg-0">
+                    <a href="https://github.com/joshuahysong" class="social-link" target="_blank" rel="noopener noreferrer">            
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-github fa-stack-1x text-primary"></i>
+                        </span>
+                    </a>  
+                    <p class="mb-0 pt-2">
+                        <span class="h5"><strong>Github</strong></span><br />
+                        View or contribute to my projects.
+                    </p>
+                </div>
+                <div class="col-md-6 col-lg-3 pb-5 pb-lg-0">  
+                    <a href="https://stackoverflow.com/users/1766561/joshua-hysong" class="social-link" target="_blank" rel="noopener noreferrer">                  
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-stack-overflow fa-stack-1x text-primary"></i>
+                        </span>
+                    </a>  
+                    <p class="mb-0 pt-2">
+                        <span class="h5"><strong>Stack Overflow</strong></span><br />
+                        Ask a question. I love to help!
+                    </p>
+                </div>
+                <div class="col-md-6 col-lg-3 pb-5 pb-lg-0">   
+                    <a href="https://www.linkedin.com/in/joshuahysong/" class="social-link" target="_blank" rel="noopener noreferrer">                 
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-linkedin-in fa-stack-1x text-primary"></i>
+                        </span>
+                    </a>  
+                    <p class="mb-0 pt-2">
+                        <span class="h5"><strong>LinkedIn</strong></span><br />
+                        Have we worked together? Add me to your network.
+                    </p>
+                </div>
+                <div class="col-md-6 col-lg-3 pb-5 pb-lg-0">                    
+                    <a href="https://www.twitter.com/joshuahysong" class="social-link" target="_blank" rel="noopener noreferrer">                   
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-twitter fa-stack-1x text-primary"></i>
+                        </span>
+                    </a>  
+                    <p class="mb-0 pt-2">
+                        <span class="h5"><strong>Twitter</strong></span><br />
+                        I'd love to chat!
+                    </p>
+                </div>
+            </section>
+            <section id="contact" class="row bg-white px-5 pt-5 pb-3">
+                <div class="col">
+                    <p><strong>Joshua Hysong</strong></p>
+                    <address>Snellville, GA 30078</address>
+                    <i class="fas fa-phone"></i> 678-765-9103<br />
+                    <i class="far fa-envelope"></i> <a href="mailto:joshuahysong@gmail.com">joshuahysong@gmail.com</a>
+                </div>
+            </section>
+        </main>
 
-    <!-- Custom Theme JavaScript -->
-    <script>
-    // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    // Scrolls to the selected menu item on the page
-    $(function() {
-        $('a[href*=#]:not([href=#],[data-toggle],[data-target],[data-slide])').click(function() {
-            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                if (target.length) {
-                    $('html,body').animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                    return false;
-                }
-            }
-        });
-    });
-    //#to-top button appears after scrolling
-    var fixed = false;
-    $(document).scroll(function() {
-        if ($(this).scrollTop() > 250) {
-            if (!fixed) {
-                fixed = true;
-                // $('#to-top').css({position:'fixed', display:'block'});
-                $('#to-top').show("slow", function() {
-                    $('#to-top').css({
-                        position: 'fixed',
-                        display: 'block'
-                    });
-                });
-            }
-        } else {
-            if (fixed) {
-                fixed = false;
-                $('#to-top').hide("slow", function() {
-                    $('#to-top').css({
-                        display: 'none'
-                    });
-                });
-            }
-        }
-    });
-    // Disable Google Maps scrolling
-    // See http://stackoverflow.com/a/25904582/1607849
-    // Disable scroll zooming and bind back the click event
-    var onMapMouseleaveHandler = function(event) {
-        var that = $(this);
-        that.on('click', onMapClickHandler);
-        that.off('mouseleave', onMapMouseleaveHandler);
-        that.find('iframe').css("pointer-events", "none");
-    }
-    var onMapClickHandler = function(event) {
-            var that = $(this);
-            // Disable the click handler until the user leaves the map area
-            that.off('click', onMapClickHandler);
-            // Enable scrolling zoom
-            that.find('iframe').css("pointer-events", "auto");
-            // Handle the mouse leave event
-            that.on('mouseleave', onMapMouseleaveHandler);
-        }
-        // Enable map zooming with mouse scroll when the user clicks the map
-    $('.map').on('click', onMapClickHandler);
-    </script>
+        <footer class="container-fluid text-center bg-white pb-3">
+            <section class="row">
+                <div class="col">
+                        <hr />
+                </div>
+            </section>
+            Copyright &copy; <script>document.write(new Date().getFullYear());</script>.
+        </footer>
 
-</body>
-
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/3192047e84.js" crossorigin="anonymous"></script>
+        <script src="js/site.js"></script>
+    </body>
 </html>
