--- a/index.html
+++ b/index.html
@@ -14,21 +14,11 @@
             <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
-                
+                </button>                
                 <div class="collapse navbar-collapse" id="navMenu">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
-                        </li>
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#connect">Connect</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#connect">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -60,7 +50,7 @@
                     </p>
                 </div>
             </section>
-            <section id="connect" class="row bg-primary text-white p-5">
+            <section class="row bg-primary text-white p-5">
                 <div class="col-md-6 col-lg-3 pb-5 pb-lg-0">
                     <a href="https://github.com/joshuahysong" class="social-link" target="_blank" rel="noopener noreferrer">            
                         <span class="fa-stack fa-4x">
@@ -110,7 +100,7 @@
                     </p>
                 </div>
             </section>
-            <section id="contact" class="row bg-white px-5 pt-5 pb-3">
+            <section class="row bg-white px-5 pt-5 pb-3">
                 <div class="col">
                     <p><strong>Joshua Hysong</strong></p>
                     <address>Snellville, GA 30078</address>
